--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -1,10 +1,10 @@
 body {
     display: grid;
     font-family: 'Times New Roman', Times, serif;
-    color-scheme: #333;
+    color-scheme: dark;
 }
 nav {
     display: flex;
     font-family: 'Times New Roman', Times, serif;
-    color-scheme: #aaa;
+    color-scheme: light;
 }
