--- a/styles/base.css
+++ b/styles/base.css
@@ -10,11 +10,21 @@ body{
     align-items: center;
     height: 100vh;
 }
-header h1, footer p {
-    font-family: 'Anton' Arial Black, sans-serif;
+header h1, h2, footer p {
+    font-family: 'Inter', Arial Black, sans-serif;
     background-color: #013569;
     color: #ffffff;
     text-align: center;
+    padding: 20px 20px;
+    margin: 0;
+}
+
+header{
+    width: 100%;
+}
+
+footer{
+    width: 100%;
 }
 
 main{
@@ -26,22 +36,41 @@ main{
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 20x;
+    grid-template-columns: 3fr 1fr;
+    gap: 20px;
 }
 
 .card{
-    grid-column: spam 3;
     background-color: #ffffff;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 20px;  
+    width: 100%;
+}
+
+.card img {
+    width: 150px; 
+    height: 150px; 
+    object-fit: cover; 
+    border-radius: 8px; 
+}
+
+.card h2{
+    width: 100%;
+    margin: 0;
+    padding-bottom: 10px;
+    text-align: center;
 }
 
 aside.resources{
-    grid-column: 4;
+    grid-column: 2;
     background-color: #f4f4f9;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    grid-row: 1 / -1;
 }
 
 a{
@@ -49,7 +78,7 @@ a{
 }
 nav ul{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     padding: 0;
     list-style: none;
 }
