--- a/styles/place.css
+++ b/styles/place.css
@@ -1,6 +1,6 @@
 /* Estilos base (Mobile-first) */
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto', Arial, sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -33,7 +33,9 @@ header h1 {
     color: #ffffff;
 }
 
-
+h2{
+    font-size: 20px;
+}
 
 .data ul, .weather ul {
     list-style: none;
