--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -6,7 +6,7 @@
   }
   
   body {
-    font-family: 'Roboto', sans-serif; /* Substitua pela fonte escolhida no Google Fonts */
+    font-family: 'Roboto', sans-serif;
     line-height: 1.6;
     background-color: #f8f8f8; /* Cor de fundo */
     color: #333; /* Texto principal */
