--- a/styles/ceara.css
+++ b/styles/ceara.css
@@ -122,7 +122,7 @@ footer p {
     color: #ffffff; /* Cor branca para o nome */
 }
 
-.trofeus {
+.trofeus, .escudos {
     text-align: center;
 }
 
